--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     font-family: "Roboto" !important;
 }
 
+h1 {
+    position: relative;
+}
+
 .background {
     position: fixed;
     background-image: -webkit-linear-gradient(-45deg, #FB4141 49%, #181616 49%, #181616 51%, #FFFFFF 51%);
@@ -25,6 +29,7 @@ body {
     align-items: center;
     margin-top: 50px;
     gap: 1rem !important;
+    margin-bottom: 100px;
 }
 
 .header-card {
@@ -35,31 +40,46 @@ body {
     padding-top: 8px;
 }
 
+.card-title {
+    font-weight: bold;
+}
+
 #pokemon-id {
     font-size: 24px;
 }
 
 .pokemon-image {
     filter: drop-shadow(8px 4px 6px black);
+    position: relative;
+    left: 27px;
+    bottom: 10px;
 }
 
 .card {
     border-radius: 10% !important;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
 }
 
 .card:hover {
     transform: scale(1.05);
     border-radius: 20px;
-    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
 }
 
 .card:hover .pokemon-image {
-    transform: translateX(-1%) scale(1.05);
+    transform: translateX(2%) scale(1.05);
     filter: drop-shadow(20px 4px 6px black);
 }
 
 .image-size {
-    width: 70%;
+    width: 80%;
+}
+
+.pokeball-bg {
+    position: absolute;
+    width: 80%;
+    height: 100%;
+    opacity: 20%;
 }
 
 .mb-3 {
@@ -89,8 +109,6 @@ body {
     background-color: #87CEEB; /* Sky Blue */
 }
 
-.flex-direction {
+.species-direction {
     display: flex;
-    flex-direction: column;
-    gap: 8px;
 }
