--- a/style.css
+++ b/style.css
@@ -13,6 +13,33 @@ body {
 
 h1 {
     position: relative;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search {
+    width: 240px !important;
+    flex: none !important;
+}
+
+.search-pokemon {
+    background: url(img/3.svg) no-repeat 3px;
+    background-color: white;
+    background-size: 20px;
+    height: 24px;
+    padding-left: 30px;
+    padding-right: 10px;
+    font-size: 16px;
+    border: 2px solid rgb(241, 91, 108);
+    border-radius: 20px;
+    transition: all 225ms linear;
 }
 
 .background {
@@ -51,18 +78,63 @@ h1 {
 .pokemon-image {
     filter: drop-shadow(8px 4px 6px black);
     position: relative;
-    left: 27px;
-    bottom: 10px;
 }
 
 .card {
     border-radius: 10% !important;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+    /* transition: transform 0.5s ease-in-out; */
+    transform-style: preserve-3d;
     cursor: pointer;
+    position: relative;
+    width: 18rem;
+    height: 25rem;
+}
+
+.card.active-overlay {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotateY(180deg) scale(1.5);
+    z-index: 1000;
+    width: 18rem;
+    height: 27rem;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: default;
+}
+
+.card__face {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.card__front {
+    background-color: transparent;
+}
+
+.card__back {
+    background-color: transparent;
+    transform: rotateY(180deg);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.background-blur {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 1;
+    display: none;
 }
 
 .card:hover {
-    transform: scale(1.05);
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
 }
@@ -72,14 +144,8 @@ h1 {
     filter: drop-shadow(20px 4px 6px black);
 }
 
-.image-size {
-    width: 80%;
-}
-
 .pokeball-bg {
     position: absolute;
-    width: 80%;
-    height: 100%;
     opacity: 20%;
 }
 
@@ -120,4 +186,21 @@ h1 {
     justify-content: center;
     align-items: center;
     bottom: 64px;
+}
+
+.image-back {
+    width: 50%;
+    margin-top: -40px;
+    position: relative;
+    top: 40px;
+}
+
+.second-area {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 40px;
 }
