--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-style: normal;
     font-weight: 400;
     src: url('/fonts/roboto-v30-latin-regular.woff2') format('woff2');
-  }
+}
 
 body {
     margin: 0;
@@ -16,6 +16,14 @@ h1 {
     display: flex;
     justify-content: center;
     font-weight: bold;
+}
+
+.h2-back{
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    gap: 50px;
+    margin-top: 8px;
 }
 
 .flex-center {
@@ -81,14 +89,14 @@ h1 {
 }
 
 .card {
-    border-radius: 10% !important;
+    border-radius: 6% !important;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
     /* transition: transform 0.5s ease-in-out; */
     transform-style: preserve-3d;
     cursor: pointer;
     position: relative;
-    width: 18rem;
-    height: 25rem;
+    width: 16rem;
+    height: 23rem;
 }
 
 .card.active-overlay {
@@ -100,8 +108,18 @@ h1 {
     width: 18rem;
     height: 27rem;
     border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: default;
+}
+
+.pokemon-type {
+    position: relative;
+    border-radius: 10px;
+    color: black;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
+    bottom: 110px;
+    left: 215px;
+    display: flex;
+    justify-content: center;
 }
 
 .card__face {
@@ -129,12 +147,12 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1;
     display: none;
 }
 
-.card:hover {
+.card__front:hover {
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
 }
@@ -169,11 +187,13 @@ h1 {
 }
 
 .species1 {
-    background-color: #FF6347; /* Coral */
+    background-color: #FF6347;
+    /* Coral */
 }
 
 .species2 {
-    background-color: #87CEEB; /* Sky Blue */
+    background-color: #87CEEB;
+    /* Sky Blue */
 }
 
 .species-direction {
@@ -193,6 +213,15 @@ h1 {
     margin-top: -40px;
     position: relative;
     top: 40px;
+    filter: drop-shadow(8px 4px 6px black);
+}
+
+.types-back {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 20%;
+    gap: 8px;
 }
 
 .second-area {
@@ -203,4 +232,18 @@ h1 {
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     border-top-right-radius: 40px;
+}
+
+.type-filter {
+    position: relative;
+    display: inline-block;
+}
+
+.type-options {
+    position: absolute;
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    padding: 10px;
+    z-index: 100;
 }
