--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    src: url('/fonts/roboto-v30-latin-regular.woff2') format('woff2');
+    src: url('./fonts/roboto-v30-latin-regular.woff2') format('woff2');
 }
 
 body {
@@ -16,6 +16,10 @@ h1 {
     display: flex;
     justify-content: center;
     font-weight: bold;
+}
+
+h2 {
+    text-decoration: underline;
 }
 
 .h2-back{
@@ -99,7 +103,6 @@ h1 {
 .card {
     border-radius: 6% !important;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
-    /* transition: transform 0.5s ease-in-out; */
     transform-style: preserve-3d;
     cursor: pointer;
     position: relative;
