--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 
 body {
     margin: 0;
-    font-family: "Roboto" !important;
 }
 
 h1 {
@@ -167,6 +166,12 @@ h2 {
     filter: drop-shadow(20px 4px 6px black);
 }
 
+.pokeball-bg1{
+    position: absolute;
+    opacity: 20%;
+    height: 45%;
+}
+
 .pokeball-bg {
     position: absolute;
     opacity: 20%;
@@ -217,8 +222,9 @@ h2 {
     width: 50%;
     margin-top: -45px;
     position: relative;
-    top: 10%;
-    left: 25%;
+    z-index: 300;
+    top: 30px;
+    left: 40%;
     filter: drop-shadow(8px 4px 6px black);
 }
 
@@ -238,6 +244,7 @@ h2 {
     background-color: white;
     width: 100%;
     height: 66%;
+    position: relative;
     border-top-left-radius: 41px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -298,7 +305,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     padding: 16px;
-    top: 225px;
+    top: 80px;
     position: relative;
 }
 
@@ -354,10 +361,41 @@ h2 {
     transform: translate(-50%, -50%) rotate(-45deg);
 }
 
+.tab-content {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    top: 24px;
+}
+
+.tab-content1 {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    top: 50px;
+    font-size: 14px;
+}
+
+.tab {
+    font-weight: bolder;
+    border-radius: 25px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.tab:hover {
+    background-color: lightgrey;
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+.aboutPokemon td {
+    padding: 10px;
+}
 @media only screen and (max-width: 500px) {
     .card.active-overlay {
         width: 14rem;
-        height: 25rem;
+        height: 21rem;
     }
 
     h2 {
@@ -381,18 +419,23 @@ h2 {
     }
 
     .navigation-arrows {
-        top: 240px;
+        top: 195px;
     }
 
     .arrow-button {
-        font-size: 14px;
+        /* font-size: 14px; */
+    }
+
+    .close-button {
+        width: 20px;
+        height: 18px;
     }
 }
 
 @media only screen and (max-width: 400px) {
     .card.active-overlay {
         width: 12rem;
-        height: 22rem;
+        height: 17rem;
     }
 
     h2 {
@@ -417,10 +460,15 @@ h2 {
     }
 
     .navigation-arrows {
-        top: 215px;
+        /* top: 155px; */
     }
 
     .arrow-button {
         font-size: 12px;
+    }
+
+    .close-button {
+        width: 17px;
+        height: 15px;
     }
 }
