--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ h2 {
     border: 1px solid #ccc;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     padding: 10px;
-    width: 120px;
+    width: 128px;
     z-index: 100;
     top: 40px;
     left: 0;
@@ -434,6 +434,27 @@ h2 {
 .about1 {
     text-align: left;
 }
+
+#scrollToTopButton {
+    display: none; /* Versteckt den Button standardmäßig */
+    position: fixed;
+    bottom: 10%;
+    right: 0%;
+    z-index: 1000;
+    padding: 10px 20px;
+    font-size: 24px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+#scrollToTopButton:hover {
+    opacity: 1; /* volle Sichtbarkeit beim Hover */
+}
+
 @media only screen and (max-width: 500px) {
     .card.active-overlay {
         width: 15rem;
