--- a/style.css
+++ b/style.css
@@ -247,8 +247,9 @@ h2 {
 .second-area {
     background-color: white;
     width: 100%;
+    top: 34%;
     height: 66%;
-    position: relative;
+    position: fixed;
     border-top-left-radius: 41px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -374,7 +375,6 @@ h2 {
 
 .tab-detail {
     position: relative;
-    display: flex;
     justify-content: space-around;
     top: 15%;
     font-size: 16px;
@@ -385,6 +385,11 @@ h2 {
 
 #myChart {
     transition: all 0.5s ease-in-out;
+}
+
+canvas {
+    display: flex;
+    width: 260px !important;
 }
 
 .tab {
@@ -433,6 +438,8 @@ h2 {
 
 .about1 {
     text-align: left;
+    padding-left: 20%;
+    justify-content: unset !important;
 }
 
 #scrollToTopButton {
@@ -455,10 +462,31 @@ h2 {
     opacity: 1; /* volle Sichtbarkeit beim Hover */
 }
 
+.evolution-chain {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 30px;
+    flex-wrap: wrap;
+}
+
+.evolution-chain img {
+    max-height: 70px;
+    width: auto;
+}
+
+.evo-text {
+    font-size: 14px;
+}
+
 @media only screen and (max-width: 500px) {
     .card.active-overlay {
         width: 15rem;
         height: 23rem;
+    }
+
+    canvas {
+        width: 210px !important;
     }
 
     h2 {
@@ -478,7 +506,8 @@ h2 {
     }
 
     .second-area {
-        height: 69%
+        height: 69%;
+        top: 31%;
     }
 
     #movesContainer {
@@ -514,11 +543,24 @@ h2 {
     .tab-content1 {
         font-size: 14px;
     }
+
+    .evolution-chain img {
+        max-height: 60px;
+        width: auto;
+    }
+    
+    .evo-text {
+        font-size: 12px;
+    }
 }
 
 @media only screen and (max-width: 400px) {
     b, strong {
         font-weight: 500;
+    }
+
+    canvas {
+        width: 185px !important;
     }
 
     #movesContainer {
@@ -528,6 +570,10 @@ h2 {
 
     .moveItem {
         font-size: 8px;
+    }
+
+    .second-area {
+        top: 27%;
     }
 
     .card.active-overlay {
@@ -592,5 +638,18 @@ h2 {
     .tab-detail {
         height: 62%;
         top: 15%;
+    }
+
+    .evolution-chain {
+        gap: 10px;
+    }
+    
+    .evolution-chain img {
+        max-height: 50px;
+        width: auto;
+    }
+    
+    .evo-text {
+        font-size: 10px !important;
     }
 }
