--- a/style.css
+++ b/style.css
@@ -521,6 +521,67 @@ canvas {
     scrollbar-color: #181616 #f1f1f1; /* Griff- und Track-Farbe */
 }
 
+#loader {
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 48%;
+    overflow: hidden;
+    border: 3px solid;
+    animation: frames .8s linear 0s infinite;
+}
+
+.d-none {
+    display: none !important;
+}
+
+#loader:after {
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 30px;
+    background-color: red;
+    border-bottom: 4px solid;
+    top: 0px;
+}
+
+#dialog {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+#loader:before {
+    content: '';
+    position: absolute;
+    background-color: #fff;
+    width: 20px;
+    height: 20px;
+    border: 4px solid;
+    border-radius: 50%;
+    bottom: 18px;
+    right: 17px;
+    z-index: 1;
+}
+
+@keyframes frames {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .card.active-overlay {
         width: 15rem;
