--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
 
 h2 {
     text-decoration: underline;
+    font-weight: bold;
 }
 
 .h2-back{
@@ -49,7 +50,7 @@ h2 {
 }
 
 .search-pokemon {
-    background: url(img/3.svg) no-repeat 3px;
+    background: url(img/pokeball.png) no-repeat 3px 1px;
     background-color: white;
     background-size: 20px;
     height: 24px;
@@ -169,6 +170,18 @@ h2 {
 .card:hover .pokemon-image {
     transform: translateX(2%) scale(1.05);
     filter: drop-shadow(20px 4px 6px black);
+}
+
+.pokeball {
+    height: 80px;
+    top: 8px;
+    position: absolute;
+    left: 8px;
+    rotate: -32deg;
+}
+
+.rotate {
+    animation: rotation 4s infinite;
 }
 
 .pokeball-bg1{
@@ -418,7 +431,7 @@ canvas {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
-    max-height: 143px; /* oder eine andere Höhe, die zu deinem Layout passt */
+    max-height: 145px; /* oder eine andere Höhe, die zu deinem Layout passt */
     overflow-y: auto; /* Fügt einen vertikalen Scrollbalken hinzu, wenn nötig */
     font-size: 10px;
     text-decoration: underline;
@@ -429,8 +442,8 @@ canvas {
     flex: 0 0 50%; /* Jedes Item nimmt 50% der Breite des Containers ein, sodass zwei nebeneinander passen */
     box-sizing: border-box;
     padding: 5px;
-    background: url(./img/moves.png) no-repeat center left;
-    background-size: 16px;
+    background: url(./img/pokeball.png) no-repeat center left;
+    background-size: 14px;
     text-align: start;
     padding-left: 20px;
 }
@@ -479,7 +492,9 @@ canvas {
     filter: drop-shadow(6px 4px 6px black);
 }
 
-
+.evolution-chain img:hover {
+    cursor: pointer;
+}
 
 .evo-text {
     font-size: 14px;
@@ -530,7 +545,7 @@ canvas {
     border-radius: 50%;
     position: absolute;
     top: 50%;
-    left: 48%;
+    left: 50%;
     overflow: hidden;
     border: 3px solid;
     animation: frames .8s linear 0s infinite;
@@ -545,7 +560,7 @@ canvas {
     position: absolute;
     width: 60px;
     height: 30px;
-    background-color: red;
+    background-color: #FB4141;
     border-bottom: 4px solid;
     top: 0px;
 }
@@ -564,14 +579,24 @@ canvas {
 #loader:before {
     content: '';
     position: absolute;
-    background-color: #fff;
+    background-color: #ffffff;
     width: 20px;
     height: 20px;
     border: 4px solid;
     border-radius: 50%;
     bottom: 18px;
-    right: 17px;
+    right: 18px;
     z-index: 1;
+}
+
+@keyframes rotation {
+    50% {
+        transform: rotate(-32deg);
+    }
+
+    50% {
+        transform: rotate(64deg);
+    }
 }
 
 @keyframes frames {
@@ -585,6 +610,10 @@ canvas {
 }
 
 @media only screen and (max-width: 500px) {
+    #loader {
+        left: 43%;
+    }
+
     .card.active-overlay {
         width: 15rem;
         height: 23rem;
@@ -617,8 +646,12 @@ canvas {
     }
 
     #movesContainer {
-        max-height: 119px;
+        max-height: 121px;
         padding-left: 10%;
+    }
+
+    .moveItem {
+        background-size: 13px;
     }
 
     .navigation-arrows {
@@ -681,6 +714,8 @@ canvas {
 
     .moveItem {
         font-size: 8px;
+        background-size: 10px;
+        padding-left: 16px;
     }
 
     .second-area {
