--- a/style.css
+++ b/style.css
@@ -538,6 +538,21 @@ canvas {
     scrollbar-color: #181616 #f1f1f1; /* Griff- und Track-Farbe */
 }
 
+.main-page {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+footer {
+    text-align: center;
+    color: #757575;
+    margin: 24px;
+    position: relative;
+    font-family: fantasy;
+    display: none;
+}
+
 #loader {
     width: 60px;
     height: 60px;
