--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h2 {
 }
 
 .search-pokemon {
-    background: url(img/pokeball.png) no-repeat 3px 1px;
+    background: url(img/pokeball.png) no-repeat 3px 0px;
     background-color: white;
     background-size: 20px;
     height: 24px;
@@ -599,8 +599,9 @@ footer {
     height: 20px;
     border: 4px solid;
     border-radius: 50%;
-    bottom: 18px;
-    right: 18px;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
     z-index: 1;
 }
 
